--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>AGROVISIONARIOS. Poduccion agropecuaria Growth Hacker.</title>
+		<title>AGROVISIONARIOS. Poduccion agropecuaria. Growth Hacker.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -15,18 +15,77 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/agrovisionarios/agrovisionarios.github.io/master/images/FB_IMG_1497325350918.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>Agrovisionarios</strong>, Producción Agropecuaria.<br />
 			</header>
 
 		<!-- Contenido principal -->
 			<div id="main">
 					<section id="one">
 						<header class="major">
-							<!-- Tu perfil - Título -->
+							<!-- Producción Agropecuaria - Agrovisionarios -->
 							<h2>Tu perfil - Título.</h2>
 						</header>
-						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<!-- Agrovisionarios - Descripción -->	<p>Sistemas de producción agropecuarios para atender a las necesidades de producción de alimentos y garantía de la seguridad y soberanía alimentaria.
+
+· Aplica los fundamentos de las ciencias básicas, por medio del cálculo y la modelación para la atención de las necesidades de productividad y competitividad de los sistemas de producción agropecuarios.
+
+· Propone alternativas de cambio en los patrones de explotación agropecuaria, mediante el uso de herramientas metodológicas orientado a la reducción de la brecha y dependencia tecnológica.
+
+· Evalúa estrategias de intervención, mediante la aplicación de las ciencias básicas, en atención a los problemas de desorden territorial.
+
+· Propone el uso de herramientas metodológicas, como alternativa estratégica, para problemas de productividad en los sistemas de producción agropecuaria.
+
+· Desarrolla alternativas de innovación tecnológica, mediante la aplicación de las ciencias básicas, para la reducción de la dependencia tecnológica en la producción agropecuaria.
+
+· Propone modelos de simulación de alternativas en la ordenación territorial, encaminados a garantizar la soberanía alimentaria.
+
+· Analiza con sentido ético y humanístico, mediante la filosofía institucional, los efectos de la aplicación de tecnologías biológicas en la productividad de los sistemas de producción agropecuarios.
+
+· Evalúa de forma ética, mediante el uso de herramientas metodológicas numéricas el comportamiento de biotecnologías experimentales que pueden constituirse en alternativas de productividad en la producción de alimentos.
+
+· Propone modelos de manejo sustentable de la agrobiodiversidad local, mediante desarrollo de investigaciones, para la conservación del patrimonio biológico local.
+
+· Explica mediante el uso de las ciencias básicas el funcionamiento de los sistemas biológicos y su interacción con el medio abiótico en los sistemas de producción agropecuaria.
+
+· Diseña estrategias tecnológicas, mediante el uso de las ciencias básicas, para el desarrollo de biofertilizantes y biopesticidas encaminados a reducir la dependencia tecnológica de los sistemas de producción.
+
+· Planifica de forma ética, mediante el uso de metodologías y tecnologías innovadoras los programas de mejoramiento genético animal y vegetal, encaminados a la competitividad y garantía de seguridad y soberanía alimentaria.
+
+· Aplica metodologías innovadoras, mediante el diálogo de saberes, para el aprendizaje con los productores agropecuarios.
+
+· Analiza de forma crítica y responsable, los derechos, garantías y deberes contemplados en la constitución y otros cuerpos legales pertinentes, orientados a la mejora de la productividad, competitividad, seguridad y soberanía alimentaria.
+
+· Propone soluciones a problemas de concentración de los medios de producción mediante el estudio crítico y responsable de la constitución como garantía de equidad e igualdad de la persona, la sociedad y la naturaleza.
+
+· Utiliza de manera responsable los resultados de la investigación en propuestas de intervención de los sistemas de producción agropecuarios, orientados a cambiarlos patrones de explotación de nuevos productos agropecuarios.
+
+· Planea mediante la aplicación de las ciencias básicas los modelos de investigación encaminados a mejorar la productividad de los sistemas de producción agropecuaria.
+
+· Comunica de forma imparcial los resultados de la investigación, para que puedan ser aplicados en la mejora de la competitividad de los sistemas de producción agropecuaria.
+
+· Explica con lenguaje adecuado los procesos de democratización del poder de los sectores productivos contemplados en la constitución, como garantía de equidad e inclusión de las personas.
+
+· Propone modelos de intervención mediante la investigación para un adecuado manejo del sistema agropecuario.
+
+· Argumenta las soluciones a los problemas de los sistemas de producción agropecuarios, mediante la aplicación de las ciencias y metodologías de medición empleadas en la investigación, para garantizar productividad.
+
+· Aplica los principios éticos en el análisis de resultados de las investigaciones, para la publicación de artículos académicos y científicos.
+
+· Formula propuestas de intervención, mediante el uso de herramientas metodológicas apropiadas a las condiciones económicas de los beneficiarios, para garantía de productividad de los sistemas de producción agropecuaria.
+
+· Recomienda la utilización de innovaciones tecnológicas, mediante el análisis de resultados experimentales para la mejora de la productividad agropecuaria.
+
+· Valora e integra el conocimiento ancestral, mediante la investigación de los saberes utilizados en los sistemas de producción agropecuaria, para alcanzar la seguridad y soberanía alimentaria con enfoque de productividad.
+
+· Desarrolla innovaciones tecnológicas, mediante el diálogo, la explicación de los saberes ancestrales con las ciencias básicas, para la reducción de la brecha y dependencia tecnológica.
+
+· Diseña modelos de patrones de explotación de productos agropecuarios alternativos, mediante el diálogo de saberes con los agricultores en el marco de la realidad intercultural, para garantizar competitividad de la zona de planificación.
+
+· Aplica metodologías participativas en procesos y sistemas productivos, para alcanzar competitividad y productividad.
+
+· Explica mediante el uso de metodologías científicas, las prácticas ancestrales para la preservación de las condiciones ambientales orientadas a garantizar soberanía alimentaria.
+
+Explica mediante la investigación los procesos de cosecha, almacenamiento y comercialización en las comunidades de productores agropecuarios en el marco de la seguridad y soberanía alimentaria..</p>
 						<ul class="actions">
 							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
@@ -41,7 +100,7 @@
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
+									<img src="https://www.linkedin.com/in/ana-belly-lucero-1930a483/"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la Comunidad Platzi.</h3>
 								<!-- Tu portafolio - Descripción -->	
@@ -51,7 +110,7 @@
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
 								<h3>Escribo en Medium.</h3>
-								<p>Escribo tácticas sobre cómo mejorar el marketing de tu empresa.</p>
+								<p>Escribo tácticas sobre cómo mejorar la produccion agropecuaria.</p>
 							</article>
 						</div>
 					</section>
@@ -64,9 +123,9 @@
 				<ul class="icons">
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
-					<li><a href="https://www.facebook.com/Jessica-Yellow-716551978447705/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://https://www.facebook.com/llanoburer/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://growthhackers.com/members/jessicayellow" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
-					<li><a href="mailto:jessicayellow.marketing@gmail.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="mailto:analucero101@misena.edu.co" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				
 		<!-- El área final -->				
