--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Producción Agropecuaria - Agrovisionarios -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>Agrovisionarios - Produccion agropecuaria.</h2>
 						</header>
 						<!-- Agrovisionarios - Descripción -->	<p>Sistemas de producción agropecuarios para atender a las necesidades de producción de alimentos y garantía de la seguridad y soberanía alimentaria.
 
