--- a/index.html
+++ b/index.html
@@ -106,7 +106,16 @@ Explica mediante la investigación los procesos de cosecha, almacenamiento y com
 								<!-- Tu portafolio - Descripción -->	
 								<p>La comunidad profesional web más reconocida del mundo.</p>
 							</article>
-							
+							<article class="6u 12u$(xsmall) work-item">
+								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
+								<a href="http://platzi.com" target="_blank" class="image fit thumb">
+								<!-- Tu portafolio - Su imagen -->	
+									<img src="https://www.linkedin.com/in/ana-belly-lucero-1930a483/"/></a>
+								<!-- Tu portafolio - Título -->	
+								<h3>Formo parte de la Comunidad Platzi.</h3>
+								<!-- Tu portafolio - Descripción -->	
+								<p>La comunidad profesional web más reconocida del mundo.</p>
+							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
 								<h3>Escribo en Medium.</h3>
