--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 Explica mediante la investigación los procesos de cosecha, almacenamiento y comercialización en las comunidades de productores agropecuarios en el marco de la seguridad y soberanía alimentaria..</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/ana-belly-lucero-1930a483" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
 					</section>
 
@@ -100,7 +100,7 @@ Explica mediante la investigación los procesos de cosecha, almacenamiento y com
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="https://www.linkedin.com/in/ana-belly-lucero-1930a483/"/></a>
+									<img src="https://raw.githubusercontent.com/agrovisionarios/agrovisionarios.github.io/master/images/FB_IMG_1497325350918.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la Comunidad Platzi.</h3>
 								<!-- Tu portafolio - Descripción -->	
@@ -110,7 +110,7 @@ Explica mediante la investigación los procesos de cosecha, almacenamiento y com
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="https://www.linkedin.com/in/ana-belly-lucero-1930a483/"/></a>
+									<img src="https://raw.githubusercontent.com/agrovisionarios/agrovisionarios.github.io/master/images/FB_IMG_1497325350918.jpg/"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la Comunidad Platzi.</h3>
 								<!-- Tu portafolio - Descripción -->	
